--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.s24.search.solr</groupId>
     <artifactId>solr-bmax-queryparser</artifactId>
     <name>solr-bmax-queryparser</name>
-    <version>2.2.3-SNAPSHOT</version>
+    <version>2.2.3RK-SNAPSHOT</version>
     <description>A synonym aware edismax query parser for Apache Solr</description>
     <url>https://github.com/shopping24/solr-bmax-queryparser</url>
     <licenses>
@@ -16,9 +16,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git@github.com:shopping24/solr-bmax-queryparser.git</connection>
-        <developerConnection>scm:git:git@github.com:shopping24/solr-bmax-queryparser.git</developerConnection>
-        <url>https://github.com/shopping24/solr-bmax-queryparser</url>
+        <connection>scm:git:git@github.com:renekrie/solr-bmax-queryparser.git</connection>
+        <developerConnection>scm:git:git@github.com:renekrie/solr-bmax-queryparser.git</developerConnection>
+        <url>https://github.com/renekrie/solr-bmax-queryparser</url>
         <tag>HEAD</tag>
     </scm>
     <issueManagement>
@@ -213,80 +213,12 @@
     </dependencies>
 
     <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
         <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <id>bintray-rene-maven</id>
+            <name>renekrie-maven-bmax</name>
+            <url>https://api.bintray.com/maven/renekrie/bmax/solr-bmax-queryparser</url>
         </repository>
     </distributionManagement>
 
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <defaultGoal>
-			      clean deploy
-			   </defaultGoal>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>2.4</version>
-                        <executions>
-                            <execution>
-                                <id>attach-sources</id>
-                                <goals>
-                                    <goal>jar-no-fork</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.3</version>
-                        <executions>
-                            <execution>
-                                <id>attach-javadocs</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                                <configuration>
-                                    <executable>gpg2</executable>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.5</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <serverId>ossrh</serverId>
-                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+
 </project>
