--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.s24.search.solr</groupId>
     <artifactId>solr-bmax-queryparser</artifactId>
     <name>solr-bmax-queryparser</name>
-    <version>2.2.3RK-SNAPSHOT</version>
+    <version>2.2.3RK</version>
     <description>A synonym aware edismax query parser for Apache Solr</description>
     <url>https://github.com/shopping24/solr-bmax-queryparser</url>
     <licenses>
@@ -19,7 +18,7 @@
         <connection>scm:git:git@github.com:renekrie/solr-bmax-queryparser.git</connection>
         <developerConnection>scm:git:git@github.com:renekrie/solr-bmax-queryparser.git</developerConnection>
         <url>https://github.com/renekrie/solr-bmax-queryparser</url>
-        <tag>HEAD</tag>
+        <tag>v2.2.3RK</tag>
     </scm>
     <issueManagement>
         <system>Github Issues</system>
@@ -148,7 +147,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore></ignore>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
