--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.s24.search.solr</groupId>
     <artifactId>solr-bmax-queryparser</artifactId>
     <name>solr-bmax-queryparser</name>
-    <version>2.2.4RK-SNAPSHOT</version>
+    <version>2.2.4RK</version>
     <description>A synonym aware edismax query parser for Apache Solr</description>
     <url>https://github.com/shopping24/solr-bmax-queryparser</url>
     <licenses>
@@ -18,7 +18,7 @@
         <connection>scm:git:git@github.com:renekrie/solr-bmax-queryparser.git</connection>
         <developerConnection>scm:git:git@github.com:renekrie/solr-bmax-queryparser.git</developerConnection>
         <url>https://github.com/renekrie/solr-bmax-queryparser</url>
-        <tag>HEAD</tag>
+        <tag>v2.2.4RK</tag>
     </scm>
     <issueManagement>
         <system>Github Issues</system>
